# tipo

./: CMakeLists.txt  README.md  ir.c  ir.h  ir_test.c  lex.c  lex.h  lex_test.c  main.c  parse.c  parse.h  parse_test.c  reduce.c  reduce.h  reduce_test.c  scope.c  scope.h  scope_test.c  utf8.c  utf8.h  utf8_test.c
